--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,9 @@ include(SourceFileUtils)
 
 project(chatterino)
 
-IF(MSVC)
+IF (MSVC)
     ADD_DEFINITIONS("/EHsc")
-ENDIF(MSVC)
+ENDIF (MSVC)
 
 file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS LIST_DIRECTORIES false "*.hpp" "*.cpp" "*.ui" "*.qrc")
 
@@ -15,8 +15,6 @@ add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_compile_definitions(${PROJECT_NAME} PRIVATE CHATTERINO UNICODE USEWINSDK AB_CUSTOM_THEME AB_CUSTOM_SETTINGS IRC_STATIC IRC_NAMESPACE=Communi) #
 target_compile_definitions(${PROJECT_NAME} PRIVATE CHATTERINO_GIT_HASH=\"XD\" CHATTERINO_GIT_RELEASE=\"XD\" CHATTERINO_GIT_COMMIT=\"XD\")
 
-target_include_directories(${PROJECT_NAME} PRIVATE . "${RapidJSON_INCLUDE_DIRS}")
-
 include(WinToast)
 
 target_link_libraries(${PROJECT_NAME}
@@ -26,16 +24,40 @@ target_link_libraries(${PROJECT_NAME}
         Qt5::Multimedia
         Qt5::Svg
         Qt5::Concurrent
-        CONAN_PKG::boost
-        CONAN_PKG::QtKeychain
-        CONAN_PKG::rapidjson
-        CONAN_PKG::openssl
-        CONAN_PKG::communi
-        CONAN_PKG::serialize
-        CONAN_PKG::settings
-        CONAN_PKG::signals
-        CONAN_PKG::WebSocketpp
         WinToast
         )
 
+if (USE_PACKAGE_MANAGER)
+    target_link_libraries(${PROJECT_NAME}
+            CONAN_PKG::boost
+            CONAN_PKG::QtKeychain
+            CONAN_PKG::rapidjson
+            CONAN_PKG::openssl
+            CONAN_PKG::communi
+            CONAN_PKG::serialize
+            CONAN_PKG::settings
+            CONAN_PKG::signals
+            CONAN_PKG::WebSocketpp
+            )
+else ()
+    target_include_directories(${PROJECT_NAME} PRIVATE . "${RapidJSON_INCLUDE_DIRS}")
+    target_link_libraries(${PROJECT_NAME}
+            Boost::Boost
+            OpenSSL::OpenSSL
+            LibCommuni::LibCommuni
+            Serialize::Serialize
+            Settings::Settings
+            Signals::Signals
+            qt5keychain
+            websocketpp::websocketpp
+            )
+endif ()
+
 target_precompile_headers(${PROJECT_NAME} PRIVATE PrecompiledHeader.hpp)
+
+if (MSVC)
+    add_custom_target(copy_dll
+            COMMAND windeployqt $<TARGET_FILE:${PROJECT_NAME}> --release --no-compiler-runtime --no-translations --no-opengl-sw --dir ${RUNTIME_OUTPUT_DIRECTORY}
+            WORKING_DIRECTORY ${RUNTIME_OUTPUT_DIRECTORY}
+            )
+endif ()
