--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
         qt-version: [default, 5.12.10]
+        build-system: [qmake, cmake]
       fail-fast: false
 
     steps:
@@ -80,7 +81,7 @@ jobs:
         shell: cmd
 
       - name: Build (Windows)
-        if: startsWith(matrix.os, 'windows')
+        if: startsWith(matrix.os, 'windows') && matrix.build-system == 'qmake'
         run: |
             call "%programfiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
             mkdir build
@@ -94,11 +95,26 @@ jobs:
             7z a chatterino-windows-x86-64.zip Chatterino2/
         shell: cmd
 
+      - name: Build with CMake (Windows)
+        if: startsWith(matrix.os, 'windows') && matrix.build-system == 'cmake'
+        run: |
+            call "%programfiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+            mkdir build
+            cd build
+            "C:\Program Files\Conan\conan\conan.exe" install ..\conanfile-qmake.txt
+            cmake -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=Release ..
+            nmake
+            windeployqt release/chatterino.exe --release --no-compiler-runtime --no-translations --no-opengl-sw --dir Chatterino2/
+            cp release/chatterino.exe Chatterino2/
+            echo nightly > Chatterino2/modes
+            7z a chatterino-windows-x86-64.zip Chatterino2/
+        shell: cmd
+
       - name: Upload artifact (Windows)
         if: startsWith(matrix.os, 'windows')
         uses: actions/upload-artifact@v2.2.2
         with:
-          name: chatterino-windows-x86-64-${{ matrix.qt-version }}.zip
+          name: chatterino-windows-x86-64-${{ matrix.qt-version }}-${{ matrix.build-system }}.zip
           path: build/chatterino-windows-x86-64.zip
 
       # LINUX
@@ -107,6 +123,7 @@ jobs:
         run: |
             sudo apt-get update
             sudo apt-get -y install \
+                cmake \
                 libssl-dev \
                 libboost-dev \
                 libboost-system-dev \
@@ -123,11 +140,20 @@ jobs:
                 libxcb-xinerama0
 
       - name: Build (Ubuntu)
-        if: startsWith(matrix.os, 'ubuntu')
+        if: startsWith(matrix.os, 'ubuntu') && matrix.build-system == 'qmake'
         run: |
             mkdir build
             cd build
             qmake PREFIX=/usr ..
+            make -j8
+        shell: bash
+
+      - name: Build with CMake (Ubuntu)
+        if: startsWith(matrix.os, 'ubuntu') && matrix.build-system == 'cmake'
+        run: |
+            mkdir build
+            cd build
+            cmake -DCMAKE_INSTALL_PREFIX=/usr ..
             make -j8
         shell: bash
 
@@ -142,22 +168,31 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
         uses: actions/upload-artifact@v2.2.2
         with:
-          name: Chatterino-x86_64-${{ matrix.qt-version }}.AppImage
+          name: Chatterino-x86_64-${{ matrix.qt-version }}-${{ matrix.build-system }}.AppImage
           path: build/Chatterino-x86_64.AppImage
 
       # MACOS
       - name: Install dependencies (MacOS)
         if: startsWith(matrix.os, 'macos')
         run: |
-            brew install boost openssl rapidjson qt p7zip create-dmg
+            brew install boost openssl rapidjson qt p7zip create-dmg cmake
         shell: bash
 
       - name: Build (MacOS)
-        if: startsWith(matrix.os, 'macos')
+        if: startsWith(matrix.os, 'macos') && matrix.build-system == 'qmake'
         run: |
             mkdir build
             cd build
             /usr/local/opt/qt/bin/qmake .. DEFINES+=$dateOfBuild
+            make -j8
+        shell: bash
+
+      - name: Build with CMake (MacOS)
+        if: startsWith(matrix.os, 'macos') && matrix.build-system == 'cmake'
+        run: |
+            mkdir build
+            cd build
+            cmake ..
             make -j8
         shell: bash
 
@@ -175,7 +210,7 @@ jobs:
         if: startsWith(matrix.os, 'macos')
         uses: actions/upload-artifact@v2.2.2
         with:
-          name: chatterino-osx-${{ matrix.qt-version }}.dmg
+          name: chatterino-osx-${{ matrix.qt-version }}-${{ matrix.build-system }}.dmg
           path: build/chatterino-osx.dmg
 
   create-release:
@@ -199,17 +234,17 @@ jobs:
 
       - uses: actions/download-artifact@v2.0.8
         with:
-          name: chatterino-windows-x86-64-default.zip
+          name: chatterino-windows-x86-64-default-qmake.zip
           path: windows/
 
       - uses: actions/download-artifact@v2.0.8
         with:
-          name: Chatterino-x86_64-default.AppImage
+          name: Chatterino-x86_64-default-qmake.AppImage
           path: linux/
 
       - uses: actions/download-artifact@v2.0.8
         with:
-          name: chatterino-osx-default.dmg
+          name: chatterino-osx-default-qmake.dmg
           path: macos/
 
       # TODO: Extract dmg and appimage
